# OS_Lab3

OS_Lab3_WinAPI/: OS_Lab3_WinAPI.sln
OS_Lab3_WinAPI/OS_Lab3_WinAPI/: CMakeLists.txt  OS_Lab3_WinAPI.vcxproj  OS_Lab3_WinAPI.vcxproj.filters  main.cpp  main_test.cpp  marker_thread.h
OS_Lab3_WinAPI/OS_Lab3_WinAPI/OS_Lab3_WinAPI/x64/Debug/: OS_Lab3_WinAPI.exe.recipe  OS_Lab3_WinAPI.ilk  vc143.idb
OS_Lab3_WinAPI/OS_Lab3_WinAPI/OS_Lab3_WinAPI/x64/Debug/OS_Lab3_WinAPI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OS_Lab3_WinAPI.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
OS_Lab3_WinAPI/OS_Lab3_WinAPI/x64/Debug/: OS_Lab3_WinAPI.exe.recipe  OS_Lab3_WinAPI.ilk  OS_Lab3_WinAPI.vcxproj.FileListAbsolute.txt  vc143.idb
OS_Lab3_WinAPI/OS_Lab3_WinAPI/x64/Debug/OS_Lab3_WinAPI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OS_Lab3_WinAPI.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
OS_Lab3_thread/: OS_Lab3_thread.sln
OS_Lab3_thread/OS_Lab3_thread/: OS_Lab3_thread.vcxproj  OS_Lab3_thread.vcxproj.filters  main.cpp  main_test.cpp  marker_thread.h
OS_Lab3_thread/OS_Lab3_thread/x64/Debug/: OS_Lab3_thread.exe.recipe  OS_Lab3_thread.ilk  vc143.idb
OS_Lab3_thread/OS_Lab3_thread/x64/Debug/OS_Lab3_thread.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OS_Lab3_thread.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
